<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_unit_test"
    app:startDestination="@id/unitTestFragment">

    <fragment
        android:id="@+id/unitTestFragment"
        android:name="com.example.tutorial_example.Fragment.UnitTestFragment"
        android:label="UnitTestFragment" >
        <action
            android:id="@+id/action_unitTestFragment_to_unitTestPage2Fragment"
            app:destination="@id/unitTestPage2Fragment" />
    </fragment>
    <fragment
        android:id="@+id/unitTestPage2Fragment"
        android:name="com.example.tutorial_example.Fragment.UnitTestPage2Fragment"
        android:label="UnitTestPage2Fragment" />
</navigation>